--- a/pom.xml
+++ b/pom.xml
@@ -95,14 +95,15 @@
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
-      <version>5.1.1.RELEASE</version>
+      <version>4.2.3.RELEASE</version>
     </dependency>
 
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>5.1.1.RELEASE</version>
+      <version>4.2.3.RELEASE</version>
     </dependency>
+
 
     <!--json-->
     <dependency>
@@ -112,17 +113,20 @@
     </dependency>
 
 
-    <!--thymeleaf-->
-    <dependency>
-      <groupId>org.thymeleaf</groupId>
-      <artifactId>thymeleaf-spring4</artifactId>
-      <version>3.0.9.RELEASE</version>
-    </dependency>
     <dependency>
       <groupId>org.thymeleaf.extras</groupId>
       <artifactId>thymeleaf-extras-springsecurity4</artifactId>
       <version>3.0.2.RELEASE</version>
+      <scope>compile</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5 -->
+    <dependency>
+      <groupId>org.thymeleaf</groupId>
+      <artifactId>thymeleaf-spring5</artifactId>
+      <version>3.0.11.RELEASE</version>
+    </dependency>
+
 
     <dependency>
       <groupId>org.thymeleaf.extras</groupId>
